# sucds

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE  README.md  katex.html
.github/workflows/: rust.yml
bench/: Cargo.toml  README.md
bench/benches/: timing_bitvec_rank.rs  timing_bitvec_select.rs  timing_chrseq_access.rs  timing_int_getter.rs  timing_intvec_access.rs  timing_predecessor.rs  timing_rank.rs  timing_ranker.rs  timing_select.rs  timing_selector.rs
bench/data/lcps/: dblp.1MiB.txt  proteins.1MiB.txt
bench/data/texts/: dblp.1MiB.txt  dna.1MiB.txt  proteins.1MiB.txt
bench/lcps/: dblp.1MiB.psef  dna.1MiB.psef  dna.1MiB.txt  proteins.1MiB.psef
bench/src/: gen_lcps.rs  mem_bitvec.rs  mem_chrseq.rs  mem_intvec.rs  memory.rs  wmb.rs
examples/: debug.rs  fmt_bit_vector.rs
src/: algorithms.rs  bit_vector.rs  bit_vectors.rs  broadword.rs  char_sequences.rs  compact_vector.rs  dacs_byte.rs  dacs_list.rs  dacs_opt.rs  darray.rs  elias_fano.rs  elias_fano_list.rs  increasing_sequences.rs  int_array.rs  int_vectors.rs  intrinsics.rs  lib.rs  mii_sequences.rs  prefix_summed_elias_fano.rs  rank9sel.rs  rs_bit_vector.rs  sarray.rs  serial.rs  util.rs  utils.rs  wavelet_matrix.rs
src/algorithms/: bwt.rs
src/bit_vector/: iter.rs  unary.rs
src/bit_vectors/: bit_vector.rs  darray.rs  prelude.rs  rank9sel.rs  sarray.rs
src/bit_vectors/bit_vector/: unary.rs
src/bit_vectors/darray/: inner.rs
src/bit_vectors/rank9sel/: inner.rs
src/char_sequences/: wavelet_matrix.rs
src/compact_vector/: iter.rs
src/dacs_list/: iter.rs
src/darray/: inner.rs  iter.rs
src/elias_fano/: iter.rs
src/elias_fano_list/: iter.rs
src/increasing_sequences/: elias_fano.rs
src/increasing_sequences/elias_fano/: iter.rs
src/int_vectors/: compact_vector.rs  dacs_byte.rs  dacs_opt.rs  prefix_summed_elias_fano.rs  prelude.rs
src/mii_sequences/: elias_fano.rs  prelude.rs
src/mii_sequences/elias_fano/: iter.rs
src/rank9sel/: inner.rs
src/rs_bit_vector/: inner.rs
src/serial/: primitive.rs
src/util/: int_io.rs  int_vector.rs  vec_io.rs
src/wavelet_matrix/: iter.rs
