[package]
name = "sucds"
version = "0.1.2"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>"]
description = "Succinct data structures in Rust"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/sucds"
repository = "https://github.com/kampersanda/sucds"
homepage = "https://github.com/kampersanda/sucds"
keywords = ["succinct", "compression"]
categories = ["data-structures"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8.4"
rand_chacha = "0.3.1"
bincode = "1.3.3"

[features]
default = []
intrinsics = []

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]

[workspace]
members = [
    "bench",
]
