[package]
name = "sucds"
version = "0.8.3"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>"]
description = "Succinct data structures in Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sucds"
repository = "https://github.com/kampersanda/sucds"
homepage = "https://github.com/kampersanda/sucds"
keywords = ["succinct", "compression"]
categories = ["data-structures"]
edition = "2018"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
num-traits = "0.2.15"

[features]
default = ["std"]

std = []
intrinsics = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]

[workspace]
members = ["bench"]
