[package]
name = "sucds-bench"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sucds = { path = ".." }
sucds = { path = "..", features = ["intrinsics"] } # Recommend to set RUSTFLAGS="-C target-cpu=native"
rand = "0.8.4"
rand_chacha = "0.3.1"
bincode = "1.3.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "timing_ranker"
harness = false

[[bench]]
name = "timing_selector"
harness = false

[[bin]]
name = "memory"
path = "src/memory.rs"
